Fixes spacing on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,7 @@ h1, h2, h3, h5, h6 {
 
 .container {
   width: 100%;
-  padding-top: $base-spacing * 5;
+  padding-top: $base-spacing * 10;
   z-index: 1;
   @media screen and (min-width: $lap-start) {
     padding-top: $base-spacing * 6;
